기본 로직은 구현했으나, SQLite 및 diesel 관련 환경 구축 에러 발생

--- a/Rocket.toml
+++ b/Rocket.toml
@@ -1,2 +1,6 @@
-[default.databases]
-personal_budget {url = "sqlite:personal_budget.db" }
+[global.databases]
+budget_db = { url = "sqlite://budget.db" }
+
+[debug]
+address = "127.0.0.1"
+port = 8000
