--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,16 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rocket = "0.5.0-rc.3"
-rocket_sync_db_pools = "0.1.0-rc.3"
+rocket = { version = "0.5.0-rc.1", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-sqlite = "0.29.0"
-clap = {version = "4.0", features = ["derive"]}
-rocket = {version = "0.5.1", features = ["json"]}
-diesel = {version = "1.4.8", features = ["sqlite"]}
+diesel = { version = "2.0", features = ["sqlite"] }
+dotenvy = "0.15"
+rocket_sync_db_pools = "0.5.0-rc.1"
+
+[dependencies.rocket_dyn_templates]
+version = "0.5.0-rc.1"
+features = ["handlebars"]
+
+[build-dependencies]
+diesel_cli = { version = "2.2.4", features = ["sqlite"] }
